<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="#f5f5f5"
                    app:layout_scrollFlags="scroll">

                    <ImageView
                        android:id="@+id/imageUser"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/placeholder_dots"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageUser" />

                    <Button
                        android:id="@+id/buttonView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/user_button_view"
                        android:theme="@android:style/ThemeOverlay.Material.Dark"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textUsername" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingTop="16dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/user_info_name"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/infoName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/placeholder_dots"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#f5f5f5"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingTop="16dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/user_info_bio"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/infoBio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/placeholder_dots"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingTop="16dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/user_info_email"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/infoEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/placeholder_dots"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#f5f5f5"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingTop="16dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/user_info_location"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/infoLocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/placeholder_dots"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingTop="16dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/user_info_company"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/infoCompany"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/placeholder_dots"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f5f5f5"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingTop="16dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/user_info_username"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/infoUsername"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/placeholder_dots"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingTop="16dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/user_info_type"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/infoType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/placeholder_dots"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>

</LinearLayout>
